2016-07-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\printindex): Set catcode of @ to 12 instead 
	of 11 so that e.g. "\@math" is not viewed all as one control 
	sequence when it should begin with the control letter "\@".

2016-07-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/refcard/txicmdcheck: Ignore @setcontentsaftertitlepage.
	* doc/refcard/txivarcheck: Ignore HTMLXREF.
	* doc/texinfo.texi (Customization Variables for @-Commands): Remove
	@setcontentsaftertitlepage.

2016-07-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi (Test of @synindex): Add section.

2016-07-30  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove --javascript-ref option, because nobody is using it.

	* tp/texi2any.pl ($result_options): Remove option 
	--javascript-ref.
	($cmdline_options): Remove value 'JAVASCRIPT_REFS'.
	* tp/Texinfo/Convert/HTML.pm
	(default_javascript_lines): Remove function.
	(%default_formatting_references): Remove 'javascript_lines'.
	(output): Don't call default_javascript_lines.
	(_file_header_informations): Don't use 'JAVASCRIPT_LINES' conf 
	value.
	(_default_begin_file, default_node_redirection_page): Don't 
	include lines referring to a JavaScript file in the file header.
	* tp/Texinfo/Common.pm (@variable_string_settables): Remove
	'JAVASCRIPT_LINES'.
	(@variable_other_settables): Remove 'JAVASCRIPT_REFS'.

2016-07-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (%block_commands, %block_item_commands)
	(%item_line_commands): Remove 'ktable'.
	(%command_index): Remove 'ktable'.
	* tp/Texinfo/Parser.pm (module documentation part): Remove @ktable.
	* tp/Texinfo/Convert/HTML.pm (%default_commands_conversion):
	Remove conversion for @ktable.
	(_convert_before_item_type): Add 'ktable' to a condition.
	* tp/Texinfo/Convert/Plaintext.pm (%item_indent_format_length):
	Remove 'ktable'.
	* tp/t/22xtable.t (ktable): Remove test.

	@ktable is being removed because nobody wants it anymore.
